--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -399,6 +399,20 @@ section {
   left: calc(50% - 20px);
 }
 
+.section-title h3 {
+  font-weight: 700;
+  font-size: 26px;
+  color: #728394;
+}
+
+.section-title h4 {
+  font-size: 22px;
+  font-weight: 700;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: #45505b;
+}
+
 .section-title p {
   margin-bottom: 0;
 }
