--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -567,6 +567,14 @@ section {
   margin-bottom: 10px;
 }
 
+.resume .resume-item h6 {
+  font-size: 14px;
+  padding: 5px 15px;
+  display: inline-block;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
 .resume .resume-item ul {
   padding-left: 20px;
 }
