--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,7 +279,8 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/homepage_bg.jpeg") top right no-repeat;
+  /*background: url("../img/homepage_bg.jpeg") top right no-repeat;*/
+  background: url("../img/brain1.png") top right no-repeat;
   background-size: cover;
   position: relative;
 }
